--- a/src/component/Slider/slider.less
+++ b/src/component/Slider/slider.less
@@ -1,5 +1,18 @@
 .slider{
-	position: relative;
+	position: fixed;
+	top:0;
+	width:70%;
 	top: 0px;
-	left: -30rem;
+	transform:translateX(-30rem);
+	transition: all .4s;
+	.info-bar{
+         width:100%;
+         height:8rem;
+         background:rgb(0,162,243);
+	}
+}
+
+.show{
+	transform:translateX(0px);
+    opacity:1;
 }
