--- a/src/component/Slider/slider.less
+++ b/src/component/Slider/slider.less
@@ -9,6 +9,11 @@
          width:100%;
          height:8rem;
          background:rgb(0,162,243);
+         img{
+              width:7rem;
+              height:7rem;
+              margin-top:1rem;
+         }
 	}
 }
 
