--- a/src/component/Slider/slider.less
+++ b/src/component/Slider/slider.less
@@ -20,7 +20,25 @@
 	         display:flex;
 	         width:100%;
 	         flex-direction: column;
-	         li a{
+	         li{
+		         a{
+		             display:flex;
+		             flex-direction: row;
+		             align-items:center;
+		             justify-content: flex-start;
+		             img{
+		                 width:2.5rem;
+		                 height:2.5rem;
+		                 border-radius:50%;
+		             }
+		             p{
+		                 font-size:1.2rem;
+		             }
+		         }
+	         } 
+	         li.first-page div{
+	             width:100%;
+
 	             display:flex;
 	             flex-direction: row;
 	             align-items:center;
