--- a/src/component/Slider/slider.less
+++ b/src/component/Slider/slider.less
@@ -16,6 +16,7 @@
          }
 	}
 	.list{
+	     background:#fff;
 	     ul{
 	         display:flex;
 	         width:100%;
@@ -36,22 +37,6 @@
 		             }
 		         }
 	         } 
-	         li.first-page div{
-	             width:100%;
-
-	             display:flex;
-	             flex-direction: row;
-	             align-items:center;
-	             justify-content: flex-start;
-	             img{
-	                 width:2.5rem;
-	                 height:2.5rem;
-	                 border-radius:50%;
-	             }
-	             p{
-	                 font-size:1.2rem;
-	             }
-	         }
 	     }
 	}
 }
