--- a/src/view/NewsList/newsList.less
+++ b/src/view/NewsList/newsList.less
@@ -10,14 +10,14 @@ ul.mainList{
             flex-direction: row;
 	        align-items:center;
 	        justify-content: flex-start;
-	        img{
-                width:5rem;
-                height:5rem;
-                border-radius: 5px;
-	        }
 	        p{
-                width:70%;
+                width:100%;
 	        }
         }
     }
+}
+.image{
+    width:5rem;
+    height:5rem;
+    border-radius: 5px;
 }
