--- a/src/component/Slider/slider.less
+++ b/src/component/Slider/slider.less
@@ -1,43 +1,52 @@
 .slider{
 	position: fixed;
 	top:0;
-	width:70%;
+	width:100%;
+	height:100%;
 	top: 0px;
 	transform:translateX(-30rem);
 	transition: all .4s;
-	.info-bar{
-         width:100%;
-         height:8rem;
-         background:rgb(0,162,243);
-         img{
-              width:7rem;
-              height:7rem;
-              margin-top:1rem;
-         }
+	&-bar{
+	    width:70%;
+	    .info-bar{
+	         height:8rem;
+	         background:rgb(0,162,243);
+	         img{
+	              width:7rem;
+	              height:7rem;
+	              margin-top:1rem;
+	         }
+		}
+		.list{
+		     background:#fff;
+		     height:100%;
+		     ul{
+		         display:flex;
+		         width:70%;
+		         flex-direction: column;
+		         li{
+			         a{
+			             display:flex;
+			             flex-direction: row;
+			             align-items:center;
+			             justify-content: flex-start;
+			             img{
+			                 width:2.5rem;
+			                 height:2.5rem;
+			                 border-radius:50%;
+			             }
+			             p{
+			                 font-size:1.2rem;
+			             }
+			         }
+		         } 
+		     }
+		}
 	}
-	.list{
-	     background:#fff;
-	     ul{
-	         display:flex;
-	         width:100%;
-	         flex-direction: column;
-	         li{
-		         a{
-		             display:flex;
-		             flex-direction: row;
-		             align-items:center;
-		             justify-content: flex-start;
-		             img{
-		                 width:2.5rem;
-		                 height:2.5rem;
-		                 border-radius:50%;
-		             }
-		             p{
-		                 font-size:1.2rem;
-		             }
-		         }
-	         } 
-	     }
+	
+	.shadow{
+	    background:#999;
+	    opacity:.6;
 	}
 }
 
