--- a/src/component/Slider/slider.less
+++ b/src/component/Slider/slider.less
@@ -6,6 +6,8 @@
 	top: 0px;
 	transform:translateX(-30rem);
 	transition: all .4s;
+	z-index:100;
+	margin:0 0 2rem 0;
 	&-bar{
 	    width:70%;
 	    .info-bar{
@@ -43,8 +45,12 @@
 		     }
 		}
 	}
-	
 	.shadow{
+	    position:absolute;
+	    width:30%;
+	    height:100%;
+	    top:0;
+	    left:70%;
 	    background:#999;
 	    opacity:.6;
 	}
