--- a/src/view/NewsDetail/newsDetail.less
+++ b/src/view/NewsDetail/newsDetail.less
@@ -2,7 +2,14 @@
 	position:fixed;
     top:0;
 	width:100%;
-	height:6rem;
+	height:4rem;
 	background:rgb(0,162,243);
 	margin: 0 0;
+	img{
+	    width: 1.5rem;
+	    height:2rem;
+	    font-size:2rem;
+	    margin-top:1rem;
+	    margin-left:.5rem;
+	}
 }
