--- a/src/component/Slider/slider.less
+++ b/src/component/Slider/slider.less
@@ -2,7 +2,7 @@
 	position: fixed;
 	top:0;
 	width:100%;
-	height:100%;
+	height:42rem;
 	top: 0px;
 	transform:translateX(-30rem);
 	transition: all .4s;
@@ -21,7 +21,7 @@
 		}
 		.list{
 		     background:#fff;
-		     height:100%;
+		     height:36rem;
 		     ul{
 		         display:flex;
 		         width:70%;
@@ -48,7 +48,7 @@
 	.shadow{
 	    position:absolute;
 	    width:30%;
-	    height:100%;
+	    height:42rem;
 	    top:0;
 	    left:70%;
 	    background:#999;
