--- a/src/view/FirstPage/firstPage.less
+++ b/src/view/FirstPage/firstPage.less
@@ -1,5 +1,19 @@
 .f-contain{
 	&-list{
-	    margin:6.5rem .6rem 3rem .6rem;
+	    margin:6.5rem .6rem 1rem .6rem;
+	}
+	.loadMore{
+	    width:100%;
+	    height:3rem;
+	    text-align:center;
+	    padding:.15rem .6rem;
+	    p{
+	        box-shadow:0 0 1px #999;
+	        font-size:1.2rem;
+	        color:#000;
+	        padding:.3rem 0;
+	        background:#999;
+	        opacity:.3;
+	    }
 	}
 }
