--- a/src/view/NewsThub/newsThub.less
+++ b/src/view/NewsThub/newsThub.less
@@ -1,5 +1,11 @@
 .newsThub{
     &-list{
 	   margin:6.5rem .6rem 3rem .6rem;
+	   .thub{
+	        img{
+		        width:100%;
+		        height: 14rem;
+	        }
+	    }
     }
 }
