--- a/src/view/NewsDetail/newsDetail.less
+++ b/src/view/NewsDetail/newsDetail.less
@@ -5,11 +5,20 @@
 	height:4rem;
 	background:rgb(0,162,243);
 	margin: 0 0;
+	display:flex;
+	align-items:center;
 	img{
 	    width: 1.5rem;
 	    height:2rem;
 	    font-size:2rem;
-	    margin-top:1rem;
+	    margin-top:.4rem;
 	    margin-left:.5rem;
+	}
+	p{
+	    color:#fff;
+	    fot-Ize:1.1rem;
+	    white-space:nowrap;          /* 不换行 */
+		overflow:hidden;               /* 内容超出宽度时隐藏超出部分的内容 */
+		text-overflow:ellipsis;
 	}
 }
