--- a/src/view/FirstPage/firstPage.less
+++ b/src/view/FirstPage/firstPage.less
@@ -1,7 +1,13 @@
 .f-contain{
-	&-list{
-	    margin:6.5rem .6rem 1rem .6rem;
+    .f-wheel{
+	    width:100%;
+	    height: 25rem;
+	    overflow:hidden;
 	}
+	&-list{
+	    margin:0rem .6rem 1rem .6rem;
+	}
+	
 	.loadMore{
 	    width:100%;
 	    height:3rem;
