--- a/src/component/Index/index.less
+++ b/src/component/Index/index.less
@@ -17,6 +17,7 @@
 	    border-style: solid;
 	    border-width: 2px 0;
 	    cursor:pointer;
+	    transition: .3s all ease-in;
 	}
 	.span::before{
 		margin:5px 0px;
